# vibe-everywhere

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PLAN.md  README.en.md  README.md  TESTING.md  product.md
.github/workflows/: ci.yml  release.yml
apps/vibe-agent/: Cargo.toml
apps/vibe-agent/src/: config.rs  easytier.rs  main.rs  port_forward_bridge.rs  port_forward_runtime.rs  providers.rs  shell_bridge.rs  shell_runtime.rs  task_bridge.rs  task_runtime.rs
apps/vibe-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/vibe-app/src/: main.ts  router.ts  styles.css  types.ts
apps/vibe-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/vibe-app/src-tauri/capabilities/: default.json
apps/vibe-app/src-tauri/src/: lib.rs  main.rs
apps/vibe-relay/: Cargo.toml
apps/vibe-relay/src/: auth.rs  config.rs  conversations.rs  easytier.rs  git.rs  main.rs  port_forwards.rs  shell.rs  store.rs  tasks.rs
crates/vibe-core/: Cargo.toml
crates/vibe-core/src/: lib.rs
crates/vibe-wire/: Cargo.toml
docs/: iteration-specs.md  problem-remediation-plan.md  relay-startup.md  relay-startup.zh-CN.md  self-hosted.md
docs/plans/: README.md  process.md
docs/releases/: README.md  unreleased.md  v0.1.11.md  v0.1.12.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.20.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md
scripts/: README.md  android-doctor.sh  dual-process-smoke.ps1  dual-process-smoke.sh  install-relay.ps1  install-relay.sh  package.json  render-release-notes.sh  stage-windows-runtime.ps1  validate-vibe-wire-fixtures.mjs
(+80 files in other folders)
