[package]
name = "vibe-relay"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
futures-core.workspace = true
futures-util.workspace = true
easytier.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
url.workspace = true
uuid.workspace = true
vibe-core = { path = "../../crates/vibe-core" }
which.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio-tungstenite.workspace = true
