[package]
name = "vibe-app"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[lib]
name = "vibe_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
tauri.workspace = true
tauri-plugin-opener.workspace = true
vibe-core = { path = "../../../crates/vibe-core" }
